# bevy_brp

./: Cargo.toml
.claude/: settings.local.json
extras/src/: plugin.rs  screenshot.rs
mcp/: Cargo.toml
mcp/help_text/: brp_extras_screenshot.txt  brp_launch_bevy_app.txt  brp_launch_bevy_example.txt  grab_selection.txt
mcp/src/: json_object.rs  mcp_service.rs
mcp/src/app_tools/: launch_params.rs
mcp/src/app_tools/support/: launch_common.rs
mcp/src/brp_tools/: mod.rs
mcp/src/brp_tools/tools/: grab_selection.rs  mod.rs  registry_schema.rs
mcp/src/tool/: handler_context.rs  parameters.rs  tool_name.rs
mcp_macros/src/: tool_fn.rs
