[workspace]
members = [
  "extras",
  "mcp",
  "mcp_macros",
  "test-app",
  "test-duplicate-a",
  "test-duplicate-b",
]
resolver = "2"

[workspace.package]
repository = "https://github.com/natepiano/bevy_brp"

[workspace.dependencies]
# Bevy with no default features - each crate specifies what it needs
bevy       = { version = "0.17.3", default-features = false }
bevy_mesh  = { version = "0.17.3" }
bevy_winit = { version = "0.17.3" }

# Core dependencies (shared between extras and mcp)
anyhow = "1.0"
async-trait = "0.1.89"
bevy_brp_mcp_macros = "0.17.3"
cargo_metadata = "0.23"
chrono = "0.4"
either = "1.15"
error-stack = { version = "0.6.0", features = ["spantrace"] }
futures = "0.3"
heck = "0.5.0"
itertools = "0.14.0"
json-pretty-compact = "0.1.2"
netstat2 = "0.11"
nom = "8.0.0"
once_cell = "1.21.3"
paste = "1.0"
proc-macro2 = "1.0.103"
quote = "1.0.42"
regex = "1.12.2"
reqwest = { version = "0.12", features = ["blocking", "json", "stream"] }
rmcp = { version = "0.11", features = ["server", "transport-io"] }
schemars = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
strum = "0.27.2"
strum_macros = "0.27.2"
syn = { version = "2.0.110", features = ["extra-traits", "full"] }
sysinfo = "0.37.2"
tempfile = "3.23.0"
thiserror = "2.0"
tokio = { version = "1.48.0", features = ["full", "signal"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7", features = ["codec"] }
tracing = { version = "0.1.41", features = [
  "max_level_trace",
  "release_max_level_trace",
] }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4"] }

# Shared lints configuration
[workspace.lints.rust]
missing_docs = "deny"

[workspace.lints.clippy]
# Strict lints as specified in the migration plan
expect_used = "deny"
panic       = "deny"
unwrap_used = "deny"

# Enable lint groups as errors (with lower priority so allows can override)
all      = { level = "deny", priority = -1 }
cargo    = { level = "deny", priority = -1 }
nursery  = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

# Allow specific lints that conflict with Bevy patterns
multiple_crate_versions = "allow"
needless_pass_by_value  = "allow"
