[package]
authors              = ["natepiano <slicks.curable.0k@icloud.com>"]
categories           = ["development-tools", "game-development"]
description          = "MCP server for Bevy Remote Protocol (BRP) integration"
edition              = "2024"
keywords             = ["bevy", "brp", "mcp", "protocol", "remote"]
license              = "MIT OR Apache-2.0"
name                 = "bevy_brp_mcp"
readme               = "README.md"
repository.workspace = true
version              = "0.17.2-gb.1"

[features]
mcp-debug = []

[dependencies]
# MCP only needs bevy_remote feature, no defaults
bevy = { workspace = true, default-features = false, features = [
  "bevy_remote",
] }

# All other dependencies use workspace
anyhow.workspace              = true
async-trait.workspace         = true
bevy_brp_mcp_macros.workspace = true
cargo_metadata.workspace      = true
chrono.workspace              = true
either.workspace              = true
error-stack.workspace         = true
futures.workspace             = true
itertools.workspace           = true
json-pretty-compact.workspace = true
netstat2.workspace            = true
nom.workspace                 = true
once_cell.workspace           = true
paste.workspace               = true
regex.workspace               = true
reqwest                       = { workspace = true, features = ["json", "stream"] }
rmcp.workspace                = true
schemars.workspace            = true
serde.workspace               = true
serde_json.workspace          = true
strum                         = { workspace = true, features = ["derive"] }
strum_macros.workspace        = true
sysinfo.workspace             = true
thiserror.workspace           = true
tokio.workspace               = true
tokio-stream.workspace        = true
tokio-util.workspace          = true
tracing.workspace             = true
tracing-appender.workspace    = true
tracing-subscriber.workspace  = true
uuid.workspace                = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
